# MockUnitTest

./: CMakeLists.txt
source/summation/: CMakeLists.txt  summation.cpp  summation.h
tests/: CMakeLists.txt  mock_test.cpp
